# AlcuinusBot

./: .gitignore  CONNECTION_STRATEGIES.md  CORE_ARCHITECTURE.md  DEPLOYMENT_NOTES.md  IMPLEMENTATION_SKETCH.md  LICENSE  MVP_SCOPE.md  README.md  ROADMAP.md  SPECIFICATIONS.md  pyproject.toml
assets/: PERSONALITY.md
config/: .env.example  channels.csv
data/: bundles.json  chunks.json  link_metadata.json
src/alcuinus/: anchor_detection.py  association.py  bot.py  chat_export_ingest.py  chunking.py  clustering.py  decay.py  embedding.py  extraction.py  metadata.py  output.py  review.py  syllabus.py
src/alcuinusbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_anchor_detection.py  test_association.py  test_chunking.py  test_clustering.py  test_decay.py  test_embedding.py  test_metadata.py  test_output.py  test_review.py  test_syllabus.py
